package-analytics/main/default/objects/PackageVersion__c/PackageVersion__c.object-meta.xml
<CustomObject>
    <label>Package Version</label>
    <nameField>
        <label>Package Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>