package-analytics/main/default/objects/PackageVersion__c/fields/BuildNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildNumber__c</fullName>
    <label>Build Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>