package-analytics/main/default/objects/PackageVersion__c/fields/IsDeprecated__c.field-meta.xml
<CustomField>
    <fullName>IsDeprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deprecated</label>
    <type>Checkbox</type>
</CustomField>