package-analytics/main/default/objects/PackageVersion__c/fields/MajorVersion__c.field-meta.xml
<CustomField>
    <fullName>MajorVersion__c</fullName>
    <label>Major Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>