package-analytics/main/default/objects/PackageVersion__c/fields/MinorVersion__c.field-meta.xml
<CustomField>
    <fullName>MinorVersion__c</fullName>
    <label>Minor Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>