package-analytics/main/default/objects/PackageVersion__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Package Versions</relationshipLabel>
    <relationshipName>PackageVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>