package-analytics/main/default/objects/PackageVersion__c/fields/PackageNamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>PackageNamespacePrefix__c</fullName>
    <formula>Package__r.NamespacePrefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Namespace</label>
    <type>Text</type>
</CustomField>