package-analytics/main/default/objects/PackageVersion__c/fields/PatchVersion__c.field-meta.xml
<CustomField>
    <fullName>PatchVersion__c</fullName>
    <label>Patch Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>