package-analytics/main/default/objects/PackageVersion__c/fields/ReleaseState__c.field-meta.xml
<CustomField>
    <fullName>ReleaseState__c</fullName>
    <label>Release State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>