package-analytics/main/default/objects/PackageVersion__c/fields/SubscriberPackageVersionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberPackageVersionId__c</fullName>
    <externalId>true</externalId>
    <label>Subscriber Package Version ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>