package-analytics/main/default/objects/PackageVersion__c/fields/TotalPackageSubscriberOrgs__c.field-meta.xml
<CustomField>
    <fullName>TotalPackageSubscriberOrgs__c</fullName>
    <label>Total Package Subscriber Orgs</label>
    <summaryForeignKey>PackageSubscriberOrg__c.PackageVersion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>