package-analytics/main/default/objects/PackageVersion__c/fields/TotalProductionPackageSubscriberOrgs__c.field-meta.xml
<CustomField>
    <fullName>TotalProductionPackageSubscriberOrgs__c</fullName>
    <label>Total Production Installs</label>
    <summaryFilterItems>
        <field>PackageSubscriberOrg__c.OrgType__c</field>
        <operation>equals</operation>
        <value>Production</value>
    </summaryFilterItems>
    <summaryForeignKey>PackageSubscriberOrg__c.PackageVersion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>