package-analytics/main/default/objects/PackageVersion__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <formula
  >TEXT(MajorVersion__c) + &apos;.&apos; + TEXT(MinorVersion__c) + &apos;.&apos; + TEXT(PatchVersion__c) + &apos;.&apos; + TEXT(BuildNumber__c) + &apos;-&apos; + TEXT(BuildNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version Number</label>
    <type>Text</type>
</CustomField>