package-analytics/main/default/objects/PackageVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Package__c</columns>
    <columns>PackageNamespacePrefix__c</columns>
    <columns>SubscriberPackageVersionId__c</columns>
    <columns>VersionNumber__c</columns>
    <columns>ReleaseState__c</columns>
    <columns>IsDeprecated__c</columns>
    <columns>TotalPackageSubscriberOrgs__c</columns>
    <columns>LastUpdated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>