package-analytics/main/default/objects/PackageVersion__c/listViews/AllReleased.listView-meta.xml
<ListView>
    <fullName>AllReleased</fullName>
    <columns>NAME</columns>
    <columns>Package__c</columns>
    <columns>PackageNamespacePrefix__c</columns>
    <columns>SubscriberPackageVersionId__c</columns>
    <columns>VersionNumber__c</columns>
    <columns>TotalPackageSubscriberOrgs__c</columns>
    <columns>LastUpdated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReleaseState__c</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <label>All Released</label>
</ListView>